SPIXI/SPIXI/Assets/html/css/spixiui.css
/* ... */
.spixi-toolbar.extended {
    height: 128px;
}
.spixi-toolbar.extended-main {
    height: 166px;
}
.spixi-toolbar.shadow {
    box-shadow:0px 1px 2px #777;
}

.spixi-toolbar-row {
    padding-top: 10px;
    height: 56px;
}

.spixi-toolbar-row > div:nth-child(1) {
    position: absolute;
    z-index: 1;
    max-width: 50pt;
    -webkit-box-flex: unset;
    -ms-flex: auto;
    flex: auto;
    padding-left: 30px;
}

.spixi-toolbar-row > div:nth-child(2) {
    position: absolute;
    z-index: 0;
    max-width: 100%;
    -webkit-box-flex: unset;
    -ms-flex: auto;
    flex: auto;
    padding-left: 50pt;
    padding-right: 50pt;
    left: 0px;
    right: 0px;
    box-sizing: border-box;
}

.spixi-toolbar-row > div:nth-child(3) {
    position: absolute;
    z-index: 1;
    max-width: 50pt;
    -webkit-box-flex: unset;
    -ms-flex: auto;
    flex: auto;
    padding-right: 30px;
    text-align: right;
    right: 0px;
}

.spixi-toolbar-row.extended {
    padding-top: 12px;
    font-size: 14pt;
}
.spixi-toolbar-row-details {
    padding-right: 15pt;
    font-size:9pt;
}

.spixi-toolbar-holder {
    width: 100%;
    height: 56px;
}
.spixi-toolbar-holder.extended {
    height: 128px;
}
.spixi-toolbar-holder.extended-main {
    height: 166px;
}

.spixi-toolbar-line {
    width: 85%;
    height: 1px;
    background: rgba(0,0,0,0.2);
    margin: auto;
}

.spixi-toolbar-logo {
    background-image: url('../img/spixitoolbarlogo.png');
    width: 122px;
    height: 40px;
    background-size: 122px 40px;
    background-repeat: no-repeat;
    background-position: center;
    margin: auto;
}

.spixi-toolbar-option {
    box-sizing: border-box;
    font-size: 12pt;
    border: 1px solid white;
    border-radius: 10px;
    display: inline-block;
    padding: 3px 12px;
}

.spixi-toolbar-option:hover
{
    background: rgba(11, 11, 11, 0.5);
}

.spixi-toolbar-chat-name {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.spixi-toolbar-chat-status {
    font-size: 11pt;
    margin-top: -4pt;
    font-weight: 200;
}

.spixi-toolbar-contact {
    width: 100%;
    font-size: 16pt;
    color: #FFF; 
    background-color: #25193c;
    padding: 0px 20px;
}

.spixi-toolbar-contact-name {
    margin-top: 24px;
    overflow: hidden;
    text-overflow: ellipsis;
}
.spixi-toolbar-contact-status {
    font-size: 9pt;
}

/* BalanceBar */
.spixi-balancebar {
    width: 100%;
    color: #fff;
    background-color: #25193c;
    box-shadow:0px 4px 10px #777;
    padding: 10px 0px;
}
.spixi-balancebar-label {
    font-size: 12pt;
    padding-left: 20px;
}
.spixi-balancebar-balance {
    font-size: 14pt;
    padding-left: 20px;
    padding-top: 8px;
}
.spixi-balancebar-line {
    margin-left: 20px;
    margin-top: 5px;
    width: 110px;
    height: 2px;
    background-color: #1692d9;
}
.spixi-balancebar-info {
    font-size: 8pt;
    font-style: italic;
    padding-left: 20px;
    padding-top: 4px;
}
.spixi-balancebar-quickscan {
    float: right;
    margin-top: -80px;
    margin-right: 20px;
}

/* OptionBar */
.spixi-optionbar {
    width: 100%;
    color: #fff;
    background: rgb(37, 25, 60);
}
.spixi-optionbar-contact-details {
    background: rgba(37, 25, 60, 0.5);
}
.spixi-optionbar-frame {
    width: 100%;
    margin: auto;
}
.spixi-optionbar-tab {
    text-align: center;
    font-size: 10pt;
    font-weight: bold;
    color: #FFFFFF;
    padding: 10px 0px;
}
.spixi-optionbar-tab:hover {
    background: #543c83;
}
.spixi-optionbar-tab:active {
    color: #dc236c;
    background: #25193c;
}
.spixi-optionbar-tab:active a {
    color: #dc236c;
}
.spixi-optionbar-tab a {
    color: #FFFFFF; 
}
.spixi-optionbar-tab-icon {
    font-size: 16pt;
    height: 26px;
}
.spixi-optionbar-label {
    margin-top: 3px;
}

/* DescriptionBar */
.spixi-descriptionbar {
    width: 100%;
    color: #fff;
    background-color: #25193c;
    box-shadow:0px 4px 10px #777;    
}
.spixi-descriptionbar-row {
    padding: 10px;
    font-size:16pt;
}
.spixi-descriptionbar-row-details {
    padding-right: 30px;
    font-size: 9pt;
}
.spixi-descriptionbar.chat {
    background-color: #55516c;
    word-wrap: break-word;
}

/* TabBar */
.spixi-footer {
    /*position: fixed;*/
    height: 64px;
    bottom: 0;
    width: 100%;
    background-color: #ad1457;
    border-top: 1px solid #CC87AB;
}

.spixi-footer-row {
    height: 64px;
    text-decoration: none;
}
.spixi-footer-row a {
 /*   color:#440024;*/
    text-decoration: none;
    display: block;
    width: 100%;
    height: 100%;
}
.spixi-footer-row a:hover {
    color:#fff;
}

.spixi-tab {
    background: #ad1457;
    text-align: center;
    font-size: 10pt;
    font-weight: bold;
    color: #3a061d;
}
.spixi-tab-pad {
    padding-top: 11px;
}
.spixi-tab.active {
    color: #FFF;
    background: #950d49;
}
.spixi-tab.active a {
    color: #FFF;
}

.spixi-tab:hover {
    background: #950d49;
}
.spixi-tab a {
    color: #3a061d; 
}
.spixi-tab-icon {
    font-size: 16pt;
    height: 26px;
}

.spixi-footer-chat-unread-indicator {
    display: none;
    border-radius: 10px;
    width: 10px;
    height: 10px;
    box-sizing: border-box;
    background: #66bced;
    border: 1px solid white;
    position: relative;
    margin: -17px auto;
    right: -6px;
}

.unread .spixi-footer-chat-unread-indicator {
    display: block;
}



/* ToastBar */
.spixi-toastbar {
    visibility: hidden;
    min-width: 250px; 
    margin-left: -125px; 
    background-color: #D5016E; 
    color: #fff; 
    text-align: center; 
    border-radius: 20px; 
    padding: 16px; 
    position: fixed; 
    z-index: 100; 
    left: 50%; 
    top: 50%;
    font-size: 11pt;
    font-weight: bold;
}
.spixi-toastbar.show {
  visibility: visible;
  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}


/* ErrorBar */
.spixi-errorbar {
    width: 100%;
    height: 32px;
    background-color: #f3aa1d;
    color: #FFFFFF;
    padding-top: 3px;
    font-size: 12pt;
}
/* ... */

